# wata

./: Cargo.toml  README.md
.github/workflows/: ci.yml
assets/: butterfly.264  eyes.264  eyes.wata  neck.264  tongue.264
bevy_wata/: Cargo.toml  README.md
bevy_wata/assets/: butterfly.wata  eyes.wata  neck.wata  tongue.wata
bevy_wata/assets/tongue/: wata.toml
bevy_wata/examples/: demo.rs
bevy_wata/src/: lib.rs
examples/: cli.rs
src/: common.rs  lib.rs  make.rs  read.rs  write.rs
